2005-11-01  Kevin P. Fleming  <kpfleming@digium.com>

	* Asterisk 1.2.0-beta2 released.
